# project-workflow

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_STRATEGY.md  Dockerfile  LIVE_TEST_PLAN.md  Makefile  README.md  UI_FUNCTIONAL_SPEC.md  alembic.ini  design-prototype.html  docker-compose.yml  graph_prototype.html  hello_world.py  pyproject.toml  test_hello.py
data/: workflow.db-shm  workflow.db-wal
data/state/: AAT-1.json  AAT-2.json
docs/: ARCHITECTURE.md  DATAFLOW.md  UI.md  WIZARD.md  plan-db-crud.md
docs/plans/: 2026-06-06-smart-agent-chatgpt-subscription-plan.md  2026-06-13-workflow-refactor.md  2026-06-21-detailed-roadmap.md  2026-06-21-improvements-roadmap.md  2026-06-21-refactor-roadmap.md  current-state.md
docs/plans/archive/legacy/: 2026-06-06-smart-agent-chatgpt-subscription-plan.md  README.md
project_workflow/: __init__.py  app_state.py  config.py  conversation.py  models.py  phase_fsm.py  phases.py  schema.py  service.py  task_validator.py  ui.py  wizard.py  wizard_checks.py  wizard_context.py  wizard_contracts.py  wizard_evaluate.py  wizard_prompt.py  wizard_store.py  wizard_types.py
project_workflow/application/: __init__.py  agent.py  instruction_service.py  phase.py  project.py  state.py  task.py  workflow.py
project_workflow/cli/: __init__.py  core.py  ui.py
project_workflow/db/: __init__.py  compat.py  db_schema.sql
project_workflow/domain/: __init__.py  fsm.py  repositories.py  validation.py
project_workflow/infrastructure/: __init__.py  conversation.py  llm.py
project_workflow/infrastructure/db/: __init__.py  compat.py  legacy.py  models.py  phase_service.py  repositories.py  schema.py  session.py  uow.py
project_workflow/infrastructure/db/migrations/: env.py
project_workflow/interfaces/: __init__.py
project_workflow/interfaces/cli/: __main__.py  core.py  ui.py
project_workflow/interfaces/ui/: __init__.py  __main__.py  app.py  compat.py  dependencies.py  main.py  seed.py  services.py  skills.py  state.py  templates.py
project_workflow/interfaces/ui/routes/: api.py  pages.py
project_workflow/interfaces/ui/templates/: base.html  dashboard.html  instructions.html  phase_detail.html  phases.html  projects.html  task_detail.html  tasks.html  workflows.html
project_workflow/references/: seed.json  smoke_seed.json
project_workflow/templates/: base.html  phase_detail.html  phases.html  projects.html
project_workflow/ui/: __init__.py  __main__.py  app.py  compat.py  dependencies.py  main.py  schemas.py  seed.py  services.py  skills.py  state.py  templates.py
project_workflow/ui/routes/: api.py  pages.py
project_workflow/wizard/: __init__.py  checks.py  context.py  contracts.py  core.py  evaluate.py  models.py  prompt.py  store.py
scripts/: docker-entrypoint.sh  init_db.py  migrate_sqlite_to_postgres.py  test_cli_live.sh
scripts/archive/legacy/: README.md  migrate_sqlite_to_postgres.py
tests/: conftest.py  test_adapters.py  test_api.py  test_api_gaps.py  test_application_services.py  test_cli_core.py  test_cli_integration.py  test_cli_ui.py  test_config.py  test_conversation.py  test_db.py  test_db_base.py  test_db_base_edge_cases.py  test_db_constraints.py  test_db_path.py  test_engine.py  test_evaluate_seed_gaps.py  test_execution_e2e.py  test_final_gaps.py  test_graph.py  test_integration.py  test_jira.py  test_jira_fallback.py  test_jobs.py  test_llm.py  test_llm_unit.py  test_misc_edge_cases.py  test_models.py  test_phase_detail_meta.py  test_phase_fsm.py  test_phases.py  test_postgres_integration.py  test_profiles.py  test_rollback.py  test_runtime_cleanup.py  test_schema.py  test_service.py  test_session_and_templates.py  test_small_modules.py  test_smoke_workflow.py  (+28 more)
tmp/: full-test.db  project-workflow-test.db
wartz_workflow/: __init__.py  cli.py  config.py  conversation.py  db.py  db_schema.sql  engine.py  gitlab_cli.py  jira_cli.py  jira_gitlab.py  jobs.py  llm.py  models.py  phases.py  profiles.py  rollback.py  schema.py  service.py  state.py  task_validator.py  ui.py  verify.py  wizard.py  wizard_checks.py  wizard_context.py  wizard_contracts.py  wizard_evaluate.py  wizard_prompt.py  wizard_store.py  wizard_types.py
wartz_workflow/adapters/: __init__.py  ports.py
wartz_workflow/adapters/http/: gitlab.py  jira.py
wartz_workflow/api/: __init__.py
wartz_workflow/api/routers/: phases.py  wizard.py
wartz_workflow/cli/: __init__.py  commands.py  core.py  delegate.py  init.py  phase.py  rollback.py  status.py  ui.py  workflow.py
wartz_workflow/db/: base.py
wartz_workflow/references/: phases.yaml  seed.json
wartz_workflow/templates/: answers.html  config.html  index.html  jobs.html  phase_detail.html  phases.html  task.html  tasks.html  wizard.html
wartz_workflow/templates/v2/: agents.html  base.html  dashboard.html  execution.html  groups.html  jobs.html  phase_detail.html  phases.html  projects.html  settings.html  skills.html  task_detail.html  tasks.html  wizard.html  wizard_list.html  workflows.html
workflow_cli/: __init__.py  config.py  conversation.py  phases.py  schema.py  task_validator.py  ui.py  wizard.py  wizard_context.py  wizard_contracts.py  wizard_evaluate.py  wizard_prompt.py
workflow_cli/application/: __init__.py
workflow_cli/cli/: __init__.py  core.py  ui.py
workflow_cli/db/: base.py  db_schema.sql
workflow_cli/domain/: __init__.py  exceptions.py  repositories.py
workflow_cli/infrastructure/db/: models.py  repositories.py  session.py  uow.py
workflow_cli/infrastructure/db/migrations/: env.py
workflow_cli/references/: seed.json
workflow_cli/templates/: agents.html  base.html  dashboard.html  phase_detail.html  phases.html  skills.html  tasks.html  workflows.html
workflow_cli/templates/v2/: agents.html  base.html  dashboard.html  phase_detail.html  projects.html  task_detail.html  tasks.html  workflows.html
workflow_cli/ui/: __init__.py  __main__.py  app.py  dependencies.py  main.py  schemas.py  seed.py  services.py  skills.py  state.py
workflow_cli/ui/routes/: api.py  pages.py
(+3 files in other folders)
