[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-workflow"
version = "1.0.0"
description = "project-workflow — жёсткий пофазовый клиент"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.3", "mypy>=1.7"]
ui  = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "jinja2>=3.1"]

[project.scripts]
project-workflow = "project_workflow.cli:main"

[tool.alembic]
# placeholder; alembic.ini carries real config

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["project_workflow"]
omit = [
    "*/tests/*",
    "*/templates/*",
    "*/references/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]