[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-workflow"
version = "1.0.0"
description = "project-workflow — жёсткий пофазовый клиент"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.3", "mypy>=1.7", "pydantic-settings>=2.0"]
ui  = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "jinja2>=3.1"]

[project.scripts]
project-workflow = "project_workflow.cli:main"

[tool.alembic]
# placeholder; alembic.ini carries real config

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = true
[[tool.mypy.overrides]]
module = "project_workflow.ui.compat"
ignore_errors = true
[[tool.mypy.overrides]]
module = [
    "project_workflow.models",
    "project_workflow.task_validator",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "project_workflow.llm",
    "project_workflow.conversation",
    "project_workflow.phase_fsm",
    "project_workflow.service",
    "project_workflow.wizard_evaluate",
    "project_workflow.domain.repositories",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "project_workflow.infrastructure.db"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "project_workflow.config",
    "project_workflow.application",
    "project_workflow.wizard_checks",
    "project_workflow.wizard_contracts",
    "project_workflow.wizard_prompt",
    "project_workflow.wizard_types",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "project_workflow.db.compat",
    "project_workflow.app_state",
    "project_workflow.schema",
    "project_workflow.cli.core",
    "project_workflow.cli.ui",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "project_workflow.wizard",
    "project_workflow.wizard_context",
    "project_workflow.wizard_store",
    "project_workflow.wizard_flow",
    "project_workflow.cli.__main__",
]
ignore_errors = true

[tool.coverage.run]
source = ["project_workflow"]
omit = [
    "*/tests/*",
    "*/templates/*",
    "*/references/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]