[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-workflow"
version = "1.0.0"
description = "project-workflow — жёсткий пофазовый клиент"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.3", "mypy>=1.7", "pydantic-settings>=2.0"]
ui  = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "jinja2>=3.1"]

[project.scripts]
project-workflow = "project_workflow.interfaces.cli:main"

[tool.alembic]
# placeholder; alembic.ini carries real config

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = true
[[tool.mypy.overrides]]
module = "project_workflow.interfaces.ui.compat"
ignore_errors = true
[[tool.mypy.overrides]]
module = [
    "project_workflow.wizard.models",
    "project_workflow.domain.validation",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "project_workflow.infrastructure.llm",
    "project_workflow.infrastructure.conversation",
    "project_workflow.domain.fsm",
    "project_workflow.infrastructure.db.legacy",
    "project_workflow.wizard.evaluate",
    "project_workflow.domain.repositories",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "project_workflow.infrastructure.db"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "project_workflow.config",
    "project_workflow.application",
    "project_workflow.wizard.checks",
    "project_workflow.wizard.contracts",
    "project_workflow.wizard.prompt",
    "project_workflow.wizard.types",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "project_workflow.infrastructure.db.compat",
    "project_workflow.application.state",
    "project_workflow.infrastructure.db.schema",
    "project_workflow.interfaces.cli.core",
    "project_workflow.interfaces.cli.ui",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "project_workflow.wizard.core",
    "project_workflow.wizard.context",
    "project_workflow.wizard.store",
    "project_workflow.interfaces.cli.__main__",
]
ignore_errors = true

[tool.coverage.run]
source = ["project_workflow"]
omit = [
    "*/tests/*",
    "*/templates/*",
    "*/references/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]